@@ -1,22 +1,22 @@
 package com.codeit.monew.domain.article.service;
 
+import com.codeit.monew.common.dto.PageResponse;
 import com.codeit.monew.domain.article.dto.mapper.ArticleMapper;
 import com.codeit.monew.domain.article.dto.request.ArticleCreateRequest;
 import com.codeit.monew.domain.article.dto.request.ArticleSearchCondition;
 import com.codeit.monew.domain.article.dto.request.ArticleSearchRequest;
 import com.codeit.monew.domain.article.dto.response.ArticleDto;
 import com.codeit.monew.domain.article.entity.Article;
-import com.codeit.monew.domain.article.entity.ArticleSource;
 import com.codeit.monew.domain.article.matcher.ArticleMatcher;
 import com.codeit.monew.domain.article.repository.ArticleRepository;
 import com.codeit.monew.domain.interest.entity.Interest;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,20 +28,42 @@ public class ArticleServiceImpl implements ArticleService {
 
     @Transactional(readOnly = true)
     @Override
-    public List<ArticleDto> searchByKeyword(ArticleSearchRequest searchRequest) {
+    public PageResponse<ArticleDto> searchByKeyword(ArticleSearchRequest request) {
+
+        int size = request.limit() != null ? request.limit() : 10;
 
         ArticleSearchCondition condition = new ArticleSearchCondition(
-                searchRequest.keyword(),
-                searchRequest.sourceIn(),
-                searchRequest.publishDateFrom(),
-                searchRequest.publishDateTo()
+                request.keyword(), request.sourceIn(), request.publishDateFrom(),
+                request.publishDateTo(), request.orderBy(), request.direction(),
+                request.cursor(), request.after(), size
         );
 
-        List<Article> articles = articleRepository.findByKeywordAndSource(condition);
+        Page<Article> articlePage = articleRepository.findByKeywordAndSource(condition);
 
-        return articles.stream()
+        long total = articleRepository.countTotalElements(condition);
+
+        Object nextCursor = null;
+        LocalDateTime nextAfter = null;
+
+        if (articlePage.hasNext() && !articlePage.isEmpty()) {
+            List<Article> content = articlePage.getContent();
+            Article lastArticle = content.get(content.size() - 1);
+
+            String orderBy = condition.orderBy() != null ? condition.orderBy() : "publishDate";
+
+            nextCursor = switch (orderBy) {
+//                case "viewCount" -> lastArticle.getViewCount();
+//                case "commentCount" -> lastArticle.getCommentCount();
+                default -> lastArticle.getPublishDate();
+            };
+            nextAfter = lastArticle.getCreatedAt();
+        }
+
+        List<ArticleDto> content = articlePage.getContent().stream()
                 .map(articleMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PageResponse<>(content, nextCursor, nextAfter, size, total, articlePage.hasNext());
     }
 
     @Transactional
